examples/test/testpolicy2969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2969
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key19: value29
      key14: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value34
          key14: value38
      podSelector:
        matchLabels:
          key1: value23
          key22: value48
          key8: value22
